# hamami

./: .gitignore  Cargo.toml  README.md  settings.toml
Hamami/src/: bot_settings.rs  event_handler.rs  hooks.rs
hamami/: Cargo.toml
hamami/src/: main.rs
