[package]
name = "Hamami"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
features = ["framework", "standard_framework", "rustls_backend"]
version = "0.11.6"


[dependencies.tokio]
version = "1.0" 
features = ["macros", "rt-multi-thread"] 

[dependencies.config]
features = ["toml"]
version = "0.13.3"
